got the arm banner crafting and basic display working on player, got guide GUI workign with better textures but still needs a fair bit of tuning